Added prodict.pl and dataadmin.pl to propath plus lot's of UI/API changes for better usability
